# FPS_Game

./: CMakeLists.txt
assets/: assets.qrc
src/: HpBar.h  MyGame.cpp  MyGame.h  StartDialog.h  main.cpp
src/Items/: Projectile.cpp  Projectile.h  Weapon.cpp  Weapon.h
src/Items/Characters/: Character.cpp  Character.h  HpBar.cpp  HpBar.h  Link.cpp  Link.h
src/Items/Maps/: Battlefield.cpp  Battlefield.h  Map.cpp  Map.h
src/Scenes/: BattleScene.cpp  BattleScene.h  Scene.cpp  Scene.h
